# 2d_pong

./: CMakeLists.txt  README.adoc  README.asciidoc  conanfile.txt  premake5.lua
assets/: .gitignore
src/: AABB.cpp  AABB.hpp  Camera.cpp  Camera.hpp  Circle.cpp  Circle.hpp  GLSLProgram.cpp  GLSLProgram.hpp  Game.cpp  Game.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  OrthoCamera.cpp  OrthoCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  Pong.cpp  Pong.hpp  Quad.cpp  Quad.hpp  Texture.cpp  Texture.hpp  TrackingOrthoCamera.cpp  TrackingOrthoCamera.hpp  Triangle.cpp  Triangle.hpp  Vertex.hpp  main.cpp
src/assets/shaders/: fragmentShader.glsl  vertexShader.glsl
src/shaders/: fragmentShader.glsl  vertexShader.glsl
